--- a/ZhuYuan/test-output/old/Default suite/classes.html
+++ b/ZhuYuan/test-output/old/Default suite/classes.html
@@ -25,4 +25,8 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>quit</td>
+<td>&nbsp;</td></tr>
 </table>
