--- a/ZhuYuan/test-output/old/Default suite/reporter-output.html
+++ b/ZhuYuan/test-output/old/Default suite/reporter-output.html
@@ -1,11 +1,11 @@
 <h2>Reporter output</h2><table><tr><td><strong style='color:green;'>Auto Start!</strong></td></tr>
 <tr><td><strong style="background: green;">Step: 1 </strong>:打开网页. </td></tr>
-<tr><td><strong style="background: green;">Step: 2 </strong>:上传图片. </td></tr>
-<tr><td><strong style="background: green;">Step: 3 </strong>:获取属性. </td></tr>
-<tr><td><strong style="background: green;">Step: 4 </strong>:获取文本. </td></tr>
-<tr><td>nullzmz 1 </td></tr>
-<tr><td><Strong style="color: red;"> Fail! [点击] SCREEN: </strong> </td></tr>
-<tr><td><a href=./snapshot/TestData-Top100.png/ target=_blank ><img style="width: 30px;"  src="./snapshot/TestData-Top100.png/ "></a></td></tr>
+<tr><td><strong style="background: green;">Step: 2 </strong>:empty. </td></tr>
+<tr><td><strong style="background: green;">Step: 3 </strong>:上传图片. </td></tr>
+<tr><td><strong style="background: green;">Step: 4 </strong>:萨达. </td></tr>
+<tr><td><strong style="background: green;">Step: 5 </strong>:duany. </td></tr>
+<tr><td><strong style="background: green;">Step: 6 </strong>:empty. </td></tr>
+<tr><td>KEYS EMPTY!</td></tr>
 <tr><td><strong style='color:green;'>Auto Start!</strong></td></tr>
 <tr><td><strong style="background: green;">Step: 1 </strong>:打开网页. </td></tr>
 <tr><td><strong style="background: green;">Step: 2 </strong>:输入朱圆. </td></tr>
